test/compile_errors/err_unreachable_message_not_str.w
//! expect-check-fail: wrong argument type in call to 'unreachable'

fn main:
    unreachable(123)
